_sass/tables.scss
/*
 * Copyright (c) 2017, Inversoft Inc., All Rights Reserved
 */
@import 'variables';

/* Tables
–––––––––––––––––––––––––––––––––––––––––––––––––– */

table {
  background: transparent;
  border-collapse: collapse;
  border-spacing: 0;
  margin-bottom: 17px;
  max-width: 100%;
  width: 100%;

  thead {

    tr {
      border-bottom: 1px solid $table-border-color;

      th {
        color: $table-header-color;
        padding: 8px;
        text-align: left;
        vertical-align: middle;

        a {
          color: $table-header-link-color;
          text-decoration: none;
        }

        &.icon {
          .checkbox {
            transition: width 0.1s ease-out;
            width: 0;
            visibility: hidden;
          }
        }

        &.sortable {
          cursor: pointer;

          // maintain this width on the header even when it doesn't have a sort indicator
          &:after {
            color: transparent;
            content: " \f106";
            font-family: FontAwesome;
            font-size: 14px;
          }

          &.sort-up:after {
            color: $table-header-sort-color;
            content: " \f106";
          }

          &.sort-down:after {
            color: $table-header-sort-color;
            content: " \f107";
          }
        }

        &.action {
          text-align: left;
          white-space: nowrap;
          width: 1px;
        }

        &.hide-on-mobile {
          display: none;

          @media (min-width: 640px) {
            display: table-cell;
          }
        }

        &.show-on-mobile {
          display: none;

          @media (max-width: 640px) {
            display: table-cell;
          }
        }
      }
    }

    &.light-header {
      background-color: $table-pagination-hover-color;
      box-shadow: $fixed-box-shadow;

      tr {
        th {
          &:first-of-type {
            border-bottom-left-radius: 2px;
            border-top-left-radius: 2px;
          }

          &:last-of-type {
            border-bottom-right-radius: 2px;
            border-top-right-radius: 2px;
          }
        }
      }
    }
  }

  &.checkboxes {
    thead {
      tr {
        th {
          &.icon {
            .checkbox {
              margin-right: 20px;
              transition: width 0.1s ease-out;
              width: 22px;
              visibility: visible;
            }

            span.box {
              margin-left: 10px;
            }
          }
        }
      }
    }

    tbody {
      tr td {
        &.icon {
          .checkbox {
            img {
              visibility: hidden;
            }

            span.box {
              opacity: 1.0;
              visibility: visible;
            }
          }
        }
      }
    }
  }

  tbody {
    tr {
      td {
        padding: 8px;
        text-align: left;
        vertical-align: middle;

        &.action {
          text-align: left;
          white-space: nowrap;
          width: 1px;
        }

        &.hide-on-mobile {
          display: none;

          @media (min-width: 640px) {
            display: table-cell;
          }
        }

        &.show-on-mobile {
          display: none;

          @media (max-width: 640px) {
            display: table-cell;
          }
        }

        &.icon {
          cursor: pointer;
          padding: 2px 8px;

          &:hover {
            .checkbox {
              img {
                visibility: hidden;
                opacity: 0;
              }

              span.box {
                visibility: visible;
              }
            }
          }

          .checkbox {
            min-width: 45px;

            img {
              position: absolute;
              opacity: 1.0;
              top: -50%;
              transition: opacity 0.3s ease-in-out;
            }

            input[type="checkbox"] {
              height: 0;
              margin-right: 0;
              width: 0;
            }

            span.box {
              margin-left: 10px;
              visibility: hidden;
            }

            input[type="checkbox"]:checked {
              ~ img {
                visibility: hidden;
              }

              ~ span.box {
                visibility: visible;
              }
            }
          }

          img {
            border: 2px solid white;
            border-radius: 50%;
            margin-right: 10px;
            height: 37px;
            position: relative;
            vertical-align: middle;
            width: 37px;

            // Handle broken avatar links w/ Font Awesome-ness.
            &:after {
              background-color: white;
              color: $table-body-link-color;
              content: "\f2be";
              display: block;
              font-family: FontAwesome;
              -webkit-font-smoothing: antialiased;
              -moz-osx-font-smoothing: grayscale;
              line-height: 30px;
              font-size: 30px;
              height: 100%;
              left: 0;
              padding-top: 3px;
              position: absolute;
              text-align: center;
              text-decoration: none;
              text-rendering: auto;
              top: 0;
              width: 100%;
            }
          }
        }

        &.top {
          vertical-align: top;
        }

        a {
          color: $table-body-link-color;
          text-decoration: none;
        }

        img.large {
          width: 75px;
        }
      }

      &:not(:last-of-type) {
        border-bottom: 1px solid $table-border-color;
      }
    }
  }

  &.properties {
    border: none;

    tr {
      td {
        &:first-child {
          font-weight: bold;
          white-space: nowrap;
          width: 1px;
        }
      }
    }
  }

  .tight {
    width: 1px;
  }

  &.no-border {
    tr {
      &:not(:last-of-type) {
        border-bottom: none;
      }
    }
  }

  &.no-padding-left-right {
    tr {
      td {
        padding-left: 0;
        padding-right: 0;
      }
    }
  }
}

.pagination {
  background: $table-pagination-background-color;
  border-radius: 2px;
  box-shadow: $table-pagination-box-shadow;
  font-size: 12px;
  margin-bottom: 20px;
  padding: 10px 0;

  a {
    border-radius: 2px;
    box-shadow: $table-pagination-input-box-shadow;
    color: $table-pagination-link-color;
    display: inline-block;
    font-size: 12px;
    margin-right: 5px;
    padding: 6px 12px;
    text-decoration: none;

    &.current {
      background: $table-pagination-link-color;
      pointer-events: none;
      color: white;
    }

    &.disabled {
      opacity: 0.5;
      pointer-events: none;
    }

    &:hover {
      background: $table-pagination-link-color;
      color: white;
    }

    &:visited:not(.current, :hover) {
      color: $table-pagination-link-color;
    }

    @media (min-width: 750px) {
      font-size: inherit;
      margin-right: 0;
      padding: 2px 7px;
    }
  }

  i.fa {
    font-size: 14px;
  }

  p {
    color: $gray-6;
    margin: 0;
    padding: 0;
  }

  label.select {
    width: inherit !important;

    &:after {
      color: $table-pagination-link-color;
      right: 7px;
      top: 5%;
    }

    select {
      background: $table-pagination-background-color;
      box-shadow: $table-pagination-input-box-shadow;
      color: $table-pagination-link-color;
      font-weight: 500;
      padding: 4px 25px 4px 10px;
      width: 100% !important;

      &:focus {
        box-shadow: $select-box-shadow, $highlight-box-shadow;
        outline: 0;
      }
    }
  }

  span {
    color: $gray-6;
    margin-right: 5px;
  }

  span.header {
    margin-right: 10px;
  }

  .number-controls {
    display: none;
  }

  .info {
    margin-bottom: 10px;
  }

  .info, .number-controls, .page-controls {
    text-align: center;
  }

  @media (min-width: 750px) {
    .info {
      margin-bottom: 0;
      text-align: center;
    }

    .number-controls {
      display: block;
      text-align: left;
    }

    .page-controls {
      text-align: right;
    }
  }

  &.simple {
    background: #fff;
    border-radius: 0;
    box-shadow: none;
    margin-bottom: 0;
    padding: 7px 0 6px 0;

    .page-controls {
      text-align: right;
    }
  }
}

